# chatvlmllm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  1.2.0  4.50.0  AUDIT_REPORT_RU.md  BBOX_FIX_SUMMARY.md  BBOX_HTML_DIRECT_FIX_REPORT.md  BBOX_HTML_DISPLAY_FIX_REPORT.md  BBOX_HTML_FIX_DEPLOYMENT_SUCCESS.md  BBOX_HTML_FIX_INSTRUCTIONS.md  BBOX_HTML_ISSUE_FINAL_SOLUTION.md  BBOX_INFINITE_LOOP_FIX.md  BBOX_ISSUE_FIXED_REPORT.md  BBOX_TEXT_FALLBACK_SOLUTION.md  BIBLIOGRAPHY_DATES_UPDATE.md  BIBLIOGRAPHY_ENHANCEMENT_REPORT.md  BIBLIOGRAPHY_IMPROVEMENT_REPORT.md  BLACKWELL_OPTIMIZATION_SUCCESS_REPORT.md  CHANGELOG.md  CHAT_EXAMPLES_FIX_REPORT.md  CHAT_PROMPTS_TRANSMISSION_SUCCESS_REPORT.md  CLEANUP_GUIDE.md  COMPARISON_SECTION_REMOVAL_REPORT.md  COMPLETE_MODEL_FIXES_REPORT.md  COMPREHENSIVE_FINAL_REPORT.md  COMPREHENSIVE_TESTING_SUMMARY.md  CONFIG_KEYERROR_FIX_REPORT.md  CONTAINER_DETECTION_FIX_REPORT.md  CONTAINER_LOGIC_FIX_SUCCESS_REPORT.md  CONTAINER_RESTART_POLICY_FIX_REPORT.md  CONTRIBUTING.md  COPYABLE_RESULTS_GUIDE.md  CRITICAL_ERRORS_ANALYSIS_REPORT.json  CRITICAL_ERRORS_FIXED_REPORT.md  DATABASE_USAGE_ANALYSIS.md  DEPLOYMENT_SUCCESS_REPORT.md  DOCKER_COMPOSE_SUCCESS_REPORT.md  DOTS_OCR_BBOX_FEATURES_IMPLEMENTED.md  (+514 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: __init__.py  settings.py
core/: __init__.py  error_handler.py  logger.py
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT_POLICY.md  MODEL_COMPARISON.md  RESEARCH_PROJECT.md  api_guide.md  architecture.md  gpu_requirements.md  model_cache_guide.md  models.md  qwen3_vl_guide.md  research_log.md  wsl_cuda_setup.md
dots_ocr/: __init__.py  utils.py
examples/: README.md  api_curl.sh  api_usage.py  sample_instructions.md
models/: __init__.py  base_model.py  deepseek_ocr.py  dots_ocr.py  dots_ocr_blackwell_compatible.py  dots_ocr_chatvlm_integration.py  dots_ocr_corrected.py  dots_ocr_dtype_fixed.py  dots_ocr_final.py  dots_ocr_fixed.py  dots_ocr_generation_fixed.py  dots_ocr_ultimate_fix.py  dots_ocr_video_processor_fixed.py  dots_ocr_vllm_integration.py  got_ocr.py  got_ocr_variants.py  model_loader.py  model_loader_backup.py  model_loader_emergency.py  phi3_vision.py  qwen3_vl.py  qwen_vl.py
notebooks/: 01_model_exploration.ipynb  02_batch_processing.ipynb  README.md
scripts/: analyze_cached_models.py  check_gpu.py  check_models.py  check_setup.py  check_wsl_cuda.py  cleanup.py  docker_build_cuda.sh  download_models.py  install_pytorch_cuda.ps1  make_executable.sh  run_tests.sh  setup.bat  setup.sh  setup_gpu.py  test_all_models.py  test_api_client.py  update_blackwell_libraries.py
services/: __init__.py  model_service.py  prompt_service.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_models.py  test_utils.py
tests/test_config/: test_settings.py
tests/test_core/: test_error_handler.py  test_logger.py
tests/test_services/: test_prompt_service.py
tests/test_utils/: test_text_cleaner.py
ui/: __init__.py  components.py  styles.py
ui/components/: __init__.py  message_renderer.py  sidebar.py
utils/: __init__.py  bbox_table_renderer.py  bbox_visualizer.py  cache.py  converters.py  cuda_recovery.py  dots_prompts.py  export.py  field_parser.py  html_table_renderer.py  image_processor.py  logger.py  markdown_renderer.py  memory_controller.py  mode_switcher.py  model_cache.py  ocr_output_processor.py  optimized_generation.py  performance_analyzer.py  smart_content_renderer.py  text_cleaner.py  text_extractor.py  validators.py  visualizer.py  xml_formatter.py  xml_table_parser.py
